[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/LevelBoundaries.gd" type="Script" id=1]
[ext_resource path="res://Levels/GemAreaTrigger.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 342.248 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 434.609, 13.5484 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 411.104, 123.005 )

[node name="LevelBoundaries" type="Node2D" groups=[
"LevelBoundary",
]]
script = ExtResource( 1 )

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2( -420, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
shape = SubResource( 1 )

[node name="RightArea" type="Area2D" parent="."]
position = Vector2( 420, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
shape = SubResource( 1 )

[node name="BotArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotArea"]
position = Vector2( 0, 327.032 )
shape = SubResource( 2 )

[node name="TopArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopArea"]
position = Vector2( 0, -278.274 )
shape = SubResource( 2 )

[node name="GemZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GemZone"]
position = Vector2( 0, -142.486 )
shape = SubResource( 3 )
disabled = true

[node name="GemsAbsorbedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="area_entered" from="LeftArea" to="." method="_on_LeftArea_area_entered" binds= [ true ]]
[connection signal="area_exited" from="LeftArea" to="." method="_on_LeftArea_area_exited" binds= [ true ]]
[connection signal="area_entered" from="RightArea" to="." method="_on_LeftArea_area_entered" binds= [ false ]]
[connection signal="area_exited" from="RightArea" to="." method="_on_LeftArea_area_exited" binds= [ false ]]
[connection signal="area_entered" from="BotArea" to="." method="_on_BotArea_area_entered"]
[connection signal="area_exited" from="BotArea" to="." method="_on_BotArea_area_exited"]
[connection signal="area_entered" from="TopArea" to="." method="_on_TopArea_area_entered"]
[connection signal="area_exited" from="TopArea" to="." method="_on_TopArea_area_exited"]
[connection signal="area_entered" from="GemZone" to="." method="_on_GemZone_area_entered"]
